--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
         <script src="app/home/navigation.js"></script>
         <script src="app/dashboard/dashboard.js"></script>
         <script src="app/dashboard/home.js"></script>
+        <script src="app/dashboard/vehicle_tracking.js"></script>
         <script src="app/setting/home.js"></script>
         <script src="app/report/home.js"></script>
         <script src="app/admin/home.js"></script>
