--- a/public/app/report/alarm_frequency.html
+++ b/public/app/report/alarm_frequency.html
@@ -46,7 +46,30 @@
             </tr>
             </thead>
             <tbody>
-
+                <tr>
+                    <td>Abc Fleet</td>
+                    <td>Speed Alarm</td>
+                    <td>2 Minute</td>
+                    <td>Operation</td>
+                </tr>
+                <tr>
+                    <td>Abc Fleet</td>
+                    <td>Idling Alarm</td>
+                    <td>30 Minute</td>
+                    <td>Operation</td>
+                </tr>
+                <tr>
+                    <td>Abc Fleet</td>
+                    <td>Speed Alarm</td>
+                    <td>15 Minute</td>
+                    <td>Operation</td>
+                </tr>
+                <tr>
+                    <td>Abc Fleet</td>
+                    <td>Speed Alarm</td>
+                    <td>8 Minute</td>
+                    <td>Operation</td>
+                </tr>
             </tbody>
         </table>
     </div>
