--- a/public/app/report/alarm_records.html
+++ b/public/app/report/alarm_records.html
@@ -58,6 +58,35 @@
                 <td>Address</td>
             </tr>
             </thead>
+            <tbody>
+                <tr>
+                    <td>Abc Fleet</td>
+                    <td>ABC 1234</td>
+                    <td>Speed Alarm</td>
+                    <td>09:15:00</td>
+                    <td>124</td>
+                    <td>15L/100km</td>
+                    <td>Macalister Rd,10400 Georgetown, Pulau Pinang</td>
+                </tr>
+                <tr>
+                    <td>Abc Fleet</td>
+                    <td>DEF 5678</td>
+                    <td>Idling Alarm</td>
+                    <td>13:15:00</td>
+                    <td>0</td>
+                    <td>0.4L/100km</td>
+                    <td>SPICE Arena, Bayan Lepas, Pulau Pinang</td>
+                </tr>
+                <tr>
+                    <td>Abc Fleet</td>
+                    <td>ABC 1234</td>
+                    <td>Speed Alarm</td>
+                    <td>09:15:00</td>
+                    <td>124</td>
+                    <td>15L/100km</td>
+                    <td>Macalister Rd,10400 Georgetown, Pulau Pinang</td>
+                </tr>
+            </tbody>
         </table>
     </div>
 
