--- a/public/app/report/fuel_consumption.html
+++ b/public/app/report/fuel_consumption.html
@@ -1,4 +1,4 @@
-<p class="headerrow">GPRS Flow</p>
+<p class="headerrow">Fuel Consumption</p>
 <div class="row">
     <div class="col s12 m12 l12">
         <div class="col s12 m12 l9">
