--- a/public/app/report/gprs_flow.html
+++ b/public/app/report/gprs_flow.html
@@ -45,7 +45,38 @@
             </tr>
             </thead>
             <tbody>
-
+                <tr>
+                    <td>ABC 1234</td>
+                    <td>0123456789</td>
+                    <td>May</td>
+                    <td>320</td>
+                    <td>256</td>
+                    <td>576</td>
+                </tr>
+                <tr>
+                    <td>DEF 5678</td>
+                    <td>0124563789</td>
+                    <td>June</td>
+                    <td>512</td>
+                    <td>256</td>
+                    <td>768</td>
+                </tr>
+                <tr>
+                    <td>PGM 2562</td>
+                    <td>0126456789</td>
+                    <td>July</td>
+                    <td>320</td>
+                    <td>256</td>
+                    <td>576</td>
+                </tr>
+                <tr>
+                    <td>PMJ 8749</td>
+                    <td>0143256789</td>
+                    <td>August</td>
+                    <td>320</td>
+                    <td>256</td>
+                    <td>576</td>
+                </tr>
             </tbody>
         </table>
     </div>
