--- a/public/app/report/idle.html
+++ b/public/app/report/idle.html
@@ -71,6 +71,82 @@
                     <td><b>LOCATION</b></td>
                 </tr>
             </thead>
+            <tbody>
+                <tr>
+                    <td></td>
+                    <td>00:00:00</td>
+                    <td>23:59:59</td>
+                    <td>23:59:59</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>1.0239431 & 1.29482139</td>
+                    <td>SPICE ARENA, Bayan Lepas, Pulau Pinang</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>00:00:00</td>
+                    <td>23:59:59</td>
+                    <td>23:59:59</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>2.0423321 & 5.12421539</td>
+                    <td>Macalister Road, 10400 Georgetown, Pulau Pinang</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>00:00:00</td>
+                    <td>23:59:59</td>
+                    <td>23:59:59</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>1.0239431 & 1.29482139</td>
+                    <td>SPICE ARENA, Bayan Lepas, Pulau Pinang</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>00:00:00</td>
+                    <td>23:59:59</td>
+                    <td>23:59:59</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>2.0423321 & 5.12421539</td>
+                    <td>Macalister Road, 10400 Georgetown, Pulau Pinang</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>00:00:00</td>
+                    <td>23:59:59</td>
+                    <td>23:59:59</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>1.0239431 & 1.29482139</td>
+                    <td>SPICE ARENA, Bayan Lepas, Pulau Pinang</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>00:00:00</td>
+                    <td>23:59:59</td>
+                    <td>23:59:59</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>2.0423321 & 5.12421539</td>
+                    <td>Macalister Road, 10400 Georgetown, Pulau Pinang</td>
+                </tr>
+            </tbody>
         </table>
+    </div>
+
+    <div class="center" style="padding-top:1%">
+        <div class="col s12 m12 l12">
+            <ul class="pagination">
+                <li class="disabled"><a href="#!"><i class="fa fa-arrow-left"></i></a></li>
+                <li class="active"><a href="#!">1</a></li>
+                <li class="waves-effect"><a href="#!">2</a></li>
+                <li class="waves-effect"><a href="#!">3</a></li>
+                <li class="waves-effect"><a href="#!">4</a></li>
+                <li class="waves-effect"><a href="#!">5</a></li>
+                <li class="waves-effect"><a href="#!"><i class="fa fa-arrow-right"></i></a></li>
+            </ul>
+        </div>
     </div>
 </div>
