--- a/public/app/report/rf_data.html
+++ b/public/app/report/rf_data.html
@@ -52,9 +52,56 @@
             </thead>
             <tbody>
                 <tr>
-                    <!--WDOUJWOJE-->
+                    <td>Abc Fleet</td>
+                    <td>ABC 1234</td>
+                    <td>1234567890</td>
+                    <td>001</td>
+                    <td>Gene Lim</td>
+                    <td>00:00:00</td>
+                    <td>SPICE Arena, Bayan Lepas, Pulau Pinang</td>
+                </tr>
+                <tr>
+                    <td>Abc Fleet</td>
+                    <td>DEF 5678</td>
+                    <td>0123456789</td>
+                    <td>002</td>
+                    <td>Dennis Lee</td>
+                    <td>10:45:00</td>
+                    <td>Macalister Rd,10400 Georgetown, Pulau Pinang</td>
+                </tr>
+                <tr>
+                    <td>Abc Fleet</td>
+                    <td>PGD 4532</td>
+                    <td>1023456789</td>
+                    <td>003</td>
+                    <td>James Lim</td>
+                    <td>06:15:00</td>
+                    <td>10, Lorong Hijau, 10300, Jelutong, Pulau Pinang</td>
+                </tr>
+                <tr>
+                    <td>Abc Fleet</td>
+                    <td>PNG 1025</td>
+                    <td>1054326789</td>
+                    <td>004</td>
+                    <td>Cyanide Signk</td>
+                    <td>11:59:59</td>
+                    <td>124, Lorong Kampung, 12400 Tanjung Tokong, Pulau Pinang</td>
                 </tr>
             </tbody>
         </table>
+    </div>
+
+    <div class="center" style="padding-top:1%">
+        <div class="col s12 m12 l12">
+            <ul class="pagination">
+                <li class="disabled"><a href="#!"><i class="fa fa-arrow-left"></i></a></li>
+                <li class="active"><a href="#!">1</a></li>
+                <li class="waves-effect"><a href="#!">2</a></li>
+                <li class="waves-effect"><a href="#!">3</a></li>
+                <li class="waves-effect"><a href="#!">4</a></li>
+                <li class="waves-effect"><a href="#!">5</a></li>
+                <li class="waves-effect"><a href="#!"><i class="fa fa-arrow-right"></i></a></li>
+            </ul>
+        </div>
     </div>
 </div>
