--- a/public/app/report/vehicle_mileage.html
+++ b/public/app/report/vehicle_mileage.html
@@ -50,20 +50,47 @@
         <table>
             <thead>
             <tr>
-                <td>Fleet></td>
+                <td>Fleet</td>
                 <td>Plate NO</td>
                 <td>Journey time</td>
                 <td>Total mileage(km)</td>
                 <td>Average speed(km/h)</td>
-                <td>Estimate fuel comsumption(L)</td>
+                <td>Estimate fuel consumption(L)</td>
                 <td>Maximum Speed</td>
             </tr>
             </thead>
             <tbody>
-
+                <tr>
+                    <td>Abc Fleet</td>
+                    <td>ABC 1234</td>
+                    <td>7:00:00</td>
+                    <td>150</td>
+                    <td>80</td>
+                    <td>36</td>
+                    <td>101</td>
+                </tr>
+                <tr>
+                    <td>Abc Fleet</td>
+                    <td>DEF 5678</td>
+                    <td>7:20:00</td>
+                    <td>130</td>
+                    <td>84</td>
+                    <td>42</td>
+                    <td>110</td>
+                </tr>
+                <tr>
+                    <td>Abc Fleet</td>
+                    <td>PGM 5249</td>
+                    <td>7:15:00</td>
+                    <td>140</td>
+                    <td>90</td>
+                    <td>45</td>
+                    <td>110</td>
+                </tr>
             </tbody>
         </table>
     </div>
+
     <div class="center" style="padding-top:1%">
         <div class="col s12 m12 l12">
             <ul class="pagination">
