--- a/public/app/report/geo_fence_statistic.html
+++ b/public/app/report/geo_fence_statistic.html
@@ -60,10 +60,45 @@
                 </thead>
                 <tbody>
                     <tr>
-
+                        <td>Butterworth</td>
+                        <td>ABC 1234</td>
+                        <td></td>
+                        <td>07:00:00</td>
+                        <td>07:03:00</td>
+                        <td>00:03:00</td>
+                    </tr>
+                    <tr>
+                        <td>Georgetown</td>
+                        <td>DEF 5678</td>
+                        <td></td>
+                        <td>07:00:00</td>
+                        <td>07:15:00</td>
+                        <td>00:15:00</td>
+                    </tr>
+                    <tr>
+                        <td>Kepala Batas</td>
+                        <td>ABC 1234</td>
+                        <td></td>
+                        <td>07:00:00</td>
+                        <td>07:20:00</td>
+                        <td>00:03:00</td>
                     </tr>
                 </tbody>
             </table>
+        </div>
+    </div>
+
+    <div class="center" style="padding-top:1%">
+        <div class="col s12 m12 l12">
+            <ul class="pagination">
+                <li class="disabled"><a href="#!"><i class="fa fa-arrow-left"></i></a></li>
+                <li class="active"><a href="#!">1</a></li>
+                <li class="waves-effect"><a href="#!">2</a></li>
+                <li class="waves-effect"><a href="#!">3</a></li>
+                <li class="waves-effect"><a href="#!">4</a></li>
+                <li class="waves-effect"><a href="#!">5</a></li>
+                <li class="waves-effect"><a href="#!"><i class="fa fa-arrow-right"></i></a></li>
+            </ul>
         </div>
     </div>
 </div>
