--- a/public/app/report/operation_log.html
+++ b/public/app/report/operation_log.html
@@ -49,39 +49,52 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
-                <td>admin</td>
-                <td>192.168.1.1</td>
-                <td>ABC1234</td>
-                <td>08:45:00</td>
-                <td>Operation</td>
-                <td>Operation</td>
-            </tr>
+               <tr>
+                    <td>admin</td>
+                    <td>192.168.1.1</td>
+                    <td>ABC1234</td>
+                    <td>08:45:00</td>
+                    <td>Operation</td>
+                    <td>Operation</td>
+                </tr>
+                <tr>
+                    <td>test</td>
+                    <td>192.168.1.2</td>
+                    <td>DEF5678</td>
+                    <td>00:00:00</td>
+                    <td>Operation</td>
+                    <td>Operation</td>
+                </tr>
+               <tr>
+                   <td>user</td>
+                   <td>192.168.1.3</td>
+                   <td>PBC2354</td>
+                   <td>18:45:00</td>
+                   <td>Operation</td>
+                   <td>Operation</td>
+               </tr>
+               <tr>
+                   <td>user</td>
+                   <td>192.168.1.6</td>
+                   <td>PFF7182</td>
+                   <td>03:09:00</td>
+                   <td>Operation</td>
+                   <td>Operation</td>
+               </tr>
             </tbody>
         </table>
     </div>
 
-<<<<<<< Updated upstream
     <div class="center" style="padding-top:1%">
         <div class="col s12 m12 l12">
             <ul class="pagination">
                 <li class="disabled"><a href="#!"><i class="fa fa-arrow-left"></i></a></li>
-=======
-    <div class="right" style="padding-top:1%">
-        <div class="col s12 m12 l12">
-            <ul class="pagination">
-                <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
->>>>>>> Stashed changes
                 <li class="active"><a href="#!">1</a></li>
                 <li class="waves-effect"><a href="#!">2</a></li>
                 <li class="waves-effect"><a href="#!">3</a></li>
                 <li class="waves-effect"><a href="#!">4</a></li>
                 <li class="waves-effect"><a href="#!">5</a></li>
-<<<<<<< Updated upstream
                 <li class="waves-effect"><a href="#!"><i class="fa fa-arrow-right"></i></a></li>
-=======
-                <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
->>>>>>> Stashed changes
             </ul>
         </div>
     </div>
