--- a/public/app/report/running_trip.html
+++ b/public/app/report/running_trip.html
@@ -47,6 +47,62 @@
                     <td><b>WARNING</b></td>
                 </tr>
             </thead>
+            <tbody>
+            <tr>
+                <td>ABC 1234</td>
+                <td>00:00:00</td>
+                <td>Macalister Rd,10400 Georgetown, Pulau Pinang</td>
+                <td>07:00:00</td>
+                <td>123 Jalan Hijau, 10300 Jelutong, Pulau Pinang</td>
+                <td>60 km/h</td>
+                <td>80 km/h</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>DEF 5678</td>
+                <td>00:00:00</td>
+                <td>Macalister Rd,10400 Georgetown, Pulau Pinang</td>
+                <td>06:50:00</td>
+                <td>123 Jalan Hutan, 12400 Tanjung Tokong, Pulau Pinang</td>
+                <td>76km/h</td>
+                <td>89km/h</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>PGM 2505</td>
+                <td>00:00:00</td>
+                <td>Macalister Rd,10400 Georgetown, Pulau Pinang</td>
+                <td>07:00:00</td>
+                <td>123 Jalan Hijau, 10300 Jelutong, Pulau Pinang</td>
+                <td>60 km/h</td>
+                <td>80 km/h</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>DEF 5678</td>
+                <td>00:00:00</td>
+                <td>Macalister Rd,10400 Georgetown, Pulau Pinang</td>
+                <td>06:50:00</td>
+                <td>123 Jalan Hutan, 12400 Tanjung Tokong, Pulau Pinang</td>
+                <td>76km/h</td>
+                <td>89km/h</td>
+                <td>0</td>
+            </tr>
+            </tbody>
         </table>
+    </div>
+
+    <div class="center" style="padding-top:1%">
+        <div class="col s12 m12 l12">
+            <ul class="pagination">
+                <li class="disabled"><a href="#!"><i class="fa fa-arrow-left"></i></a></li>
+                <li class="active"><a href="#!">1</a></li>
+                <li class="waves-effect"><a href="#!">2</a></li>
+                <li class="waves-effect"><a href="#!">3</a></li>
+                <li class="waves-effect"><a href="#!">4</a></li>
+                <li class="waves-effect"><a href="#!">5</a></li>
+                <li class="waves-effect"><a href="#!"><i class="fa fa-arrow-right"></i></a></li>
+            </ul>
+        </div>
     </div>
 </div>
