--- a/public/app/report/temperature_report.html
+++ b/public/app/report/temperature_report.html
@@ -51,9 +51,48 @@
             </thead>
             <tbody>
                 <tr>
-                    <!--Start-->
+                    <td></td>
+                    <td>00:00:00</td>
+                    <td>23:59:59</td>
+                    <td>100km</td>
+                    <td>SPICE Arena, Bayan Lepas, Pulau Pinang</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>00:00:00</td>
+                    <td>23:59:59</td>
+                    <td>120km</td>
+                    <td>Macalister Rd,10400 Georgetown, Pulau Pinang</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>00:00:00</td>
+                    <td>23:59:59</td>
+                    <td>150km</td>
+                    <td>SPICE Arena, Bayan Lepas, Pulau Pinang</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>00:00:00</td>
+                    <td>23:59:59</td>
+                    <td>180km</td>
+                    <td>Macalister Rd,10400 Georgetown, Pulau Pinang</td>
                 </tr>
             </tbody>
         </table>
+    </div>
+
+    <div class="center" style="padding-top:1%">
+        <div class="col s12 m12 l12">
+            <ul class="pagination">
+                <li class="disabled"><a href="#!"><i class="fa fa-arrow-left"></i></a></li>
+                <li class="active"><a href="#!">1</a></li>
+                <li class="waves-effect"><a href="#!">2</a></li>
+                <li class="waves-effect"><a href="#!">3</a></li>
+                <li class="waves-effect"><a href="#!">4</a></li>
+                <li class="waves-effect"><a href="#!">5</a></li>
+                <li class="waves-effect"><a href="#!"><i class="fa fa-arrow-right"></i></a></li>
+            </ul>
+        </div>
     </div>
 </div>
