--- a/public/app/report/trip_event.html
+++ b/public/app/report/trip_event.html
@@ -69,9 +69,56 @@
             </thead>
             <tbody>
                 <tr>
-                    <!--SDWODWK-->
+                    <td>Abc Fleet/ABC 1234</td>
+                    <td></td>
+                    <td>00:00:00</td>
+                    <td>23:59:59</td>
+                    <td>07:00:00</td>
+                    <td>18:00:00</td>
+                    <td>13 Hour</td>
+                </tr>
+                <tr>
+                    <td>Abc Fleet/DEF 5678</td>
+                    <td></td>
+                    <td>00:00:00</td>
+                    <td>23:59:59</td>
+                    <td>07:00:00</td>
+                    <td>18:20:00</td>
+                    <td>13:20:00</td>
+                </tr>
+                <tr>
+                    <td>Abc Fleet/PGH 2154</td>
+                    <td></td>
+                    <td>00:00:00</td>
+                    <td>23:59:59</td>
+                    <td>07:30:00</td>
+                    <td>18:30:00</td>
+                    <td>14 Hour</td>
+                </tr>
+                <tr>
+                    <td>Abc Fleet/PMG 5295</td>
+                    <td></td>
+                    <td>00:00:00</td>
+                    <td>23:59:59</td>
+                    <td>07:00:00</td>
+                    <td>18:00:00</td>
+                    <td>13 Hour</td>
                 </tr>
             </tbody>
         </table>
+    </div>
+
+    <div class="center" style="padding-top:1%">
+        <div class="col s12 m12 l12">
+            <ul class="pagination">
+                <li class="disabled"><a href="#!"><i class="fa fa-arrow-left"></i></a></li>
+                <li class="active"><a href="#!">1</a></li>
+                <li class="waves-effect"><a href="#!">2</a></li>
+                <li class="waves-effect"><a href="#!">3</a></li>
+                <li class="waves-effect"><a href="#!">4</a></li>
+                <li class="waves-effect"><a href="#!">5</a></li>
+                <li class="waves-effect"><a href="#!"><i class="fa fa-arrow-right"></i></a></li>
+            </ul>
+        </div>
     </div>
 </div>
