login front logo

--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -1,4 +1,8 @@
 <div class="row">
+    <div class="col s12 m12 l12 center" style="margin-top:2%">
+        <b style="font-size:140%">GPS MONITORING SYSTEM - Web Login</b><br/>
+        <img class="responsive-img" style="height:200px" src="/assets/image/logo.jpg">
+    </div>
     <div class="card col s12 m12 l4 offset-l4">
         <div class="card-content">
             <div class="row">
