--- a/public/app/report/history_playback.html
+++ b/public/app/report/history_playback.html
@@ -20,11 +20,11 @@
             </div>
             <p class="col s12 m12 l5">From Time:</p>
             <div class="col s12 m12 l7">
-                <input type="text" placeholder="2016-02-25 00:00:00" id="fromtime" onfocus="new WdatePicker()">
+                <input type="text" placeholder="2016-02-25" id="fromtime" onfocus="new WdatePicker()">
             </div>
             <p class="col s12 m12 l5">To Time:</p>
             <div class="col s12 m12 l7">
-                <input type="text" placeholder="2016-02-25 23:59:59" id="totime" onfocus="new WdatePicker()">
+                <input type="text" placeholder="2016-02-25" id="totime" onfocus="new WdatePicker()">
             </div>
             <a class="btn col s12 m12 l5 left">Search</a>
             <a class="btn col s12 m12 l5 right">Cancel</a>
@@ -68,8 +68,8 @@
         <div class="col s12 m12 l12 mainborder"  style="border-top:none">
             <tr>
                 <td colspan="2" style="text-align: left;">
-                    <p>Play back the track when Speed&gt;=<input type="text" class="input" id="tbSpeedLimit" value="2" style="width: 20px">Km/h,</p>
-                    <p>For inquiries or Play Progress:<a id="anow">0</a>/<a id="atotal">0</a>，<a id="aProgress">0%</a></p>
+                    <p>Play back the track when Speed  &gt;=<input type="text" class="input" id="tbSpeedLimit" value="2" style="width:40px; margin-left:2%; margin-right:2%">Km/h,</p>
+                    <p>For inquiries or Play Progress : <a id="anow">0</a>/<a id="atotal">0</a>，<a id="aProgress">0%</a></p>
                 </td>
             </tr>
         </div>
