--- a/public/app/setting/sms_service_number.html
+++ b/public/app/setting/sms_service_number.html
@@ -4,15 +4,15 @@
         <div class="col s12 m12 l12">
             <div class="col s12 m12 l4 offset-l4 input-field">
                 <label for="telephone1">Telephone 1:</label>
-                <input id="telephone1" type="number" maxlength="2">
+                <input id="telephone1" type="text" maxlength="2">
             </div>
             <div class="col s12 m12 l4 offset-l4 input-field">
                 <label for="telephone2">Telephone 2:</label>
-                <input id="telephone2" type="number" maxlength="2">
+                <input id="telephone2" type="text" maxlength="2">
             </div>
             <div class="col s12 m12 l4 offset-l4 input-field">
                 <label for="telephone3">Telephone 3:</label>
-                <input id="telephone3" type="number" maxlength="2">
+                <input id="telephone3" type="text" maxlength="2">
             </div>
         </div>
         <a class="btn">Send</a>
