--- a/public/app/report/gprs_flow.html
+++ b/public/app/report/gprs_flow.html
@@ -3,7 +3,7 @@
     <div class="col s12 m12 l12">
         <div class="col s12 m12 l9">
             <div class="col s12 m12 l3">
-                <p>Fleet & Number Plate: <input type="text" id="platenumber" placeholder="ABC1234"></p>
+                <p>Vehicle Number Plate: <input type="text" id="platenumber" placeholder="ABC1234"></p>
             </div>
 
             <div class="col s12 m12 l5">
