--- a/public/app/report/idle.html
+++ b/public/app/report/idle.html
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="col s12 m12 l10">
         <div class="col s12 m12 l3">
-            <p>Fleet & Number Plate: <input type="text" id="platenumber" placeholder="ABC1234"></p>
+            <p>Vehicle Number Plate: <input type="text" id="platenumber" placeholder="ABC1234"></p>
         </div>
 
         <div class="col s12 m12 l4">
@@ -55,7 +55,7 @@
             </div>
             <div class="col s12 m12 l12">
                 <p class="col s12 m12 l3">Driver Contact 2:</p>
-                <p class="col s12 m12 l4"><b>041234567</b></p>
+                <p class="col s12 m12 l4"><b>0412345678</b></p>
             </div>
         </div>
         <table>
