--- a/public/app/report/running_trip.html
+++ b/public/app/report/running_trip.html
@@ -2,7 +2,7 @@
 <div class="row">
     <div class="col s12 m12 l10">
         <div class="col s12 m12 l3">
-            <p>Fleet & Number Plate: <input type="text" id="platenumber" placeholder="ABC1234"></p>
+            <p>Vehicle Number Plate: <input type="text" id="platenumber" placeholder="ABC1234"></p>
         </div>
 
         <div class="col s12 m12 l4">
