--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         <div class="navbar-fixed" style="z-index: 999;">
             <nav class="white">
                 <div class="nav-wrapper container">
-                    <a href="/dashboard" class="brand-logo blue-text darken-2" ng-class="{'center' : !user }">Logo</a>
+                    <a href="/dashboard" class="brand-logo blue-text darken-2" ng-class="{'center' : !user }"></a>
                     <ul class="right hide-on-med-and-down" ng-if="user">
                         <li><a class="dropdown-button blue-text" ><i class="fa fa-globe"></i></a></li> <!--notification button-->
                         <li><a class="dropdown-button blue-text" style="font-weight:300;" data-activates="user_setting" data-beloworigin="true">{{user.response.username}}<i class="fa fa-arrow-down right"></i></a></li>
