Fixed bug navigation from admin to home / search css bar

--- a/public/app/admin/location.html
+++ b/public/app/admin/location.html
@@ -1,4 +1,4 @@
-<div id="map" style="width: calc(100% - 240px); height: 100%; position:absolute"></div> 
+<div id="map" style="width: calc(100% - 240px); height: calc(100% - 64px); position:absolute"></div> 
 
 <div id="add_marker_modal" class="modal bottom-sheet">
     <div class="modal-content">
