--- a/public/app/dashboard/dashboard.html
+++ b/public/app/dashboard/dashboard.html
@@ -1,11 +1,17 @@
 <div class="navbar-fixed">
-    <nav style=' height: 44px; line-height: 44px;' class="blue-grey darken-3 adjust-sidenav">
+    <nav style=' height: 44px; line-height: 44px; background: #444d58;' class="adjust-sidenav">
         <div class="nav-wrapper container">
-            <ul class="right hide-on-med-and-down">
+            <ul class="left hide-on-med-and-down">
                 <li><a ui-sref=".home">Dashboard</a></li>
                 <li><a ui-sref=".vehicle_tracking">Vehicle tracking</a></li>
                 <li><a ui-sref=".settings">Settings</a></li>
                 <li><a ui-sref=".reports">Reports</a></li>
+            </ul>
+            <ul class="right">
+                <div style="background: #38414c; height:44px; line-heght:44px;" class="search">
+                    <span class="fa fa-search"></span>
+                    <input type="text" class="form-controls" placeholder="Search" style="">
+                </div>
             </ul>
         </div>
     </nav>
