--- a/public/app/dashboard/home.html
+++ b/public/app/dashboard/home.html
@@ -9,11 +9,6 @@
     </div>
 
     <div id="carlist">
-        <div class="center">
-            <input type="text" id="fleet" style="width:10%" placeholder="FLEET">
-            <a class="btn">Search</a><b><a href="" ng-click="vm.user_setting_modal()"><i class="fa fa-cogs fa-2x" style="margin-left:1%"></i></a></b>
-        </div>
-
         <table>
             <thead>
                 <tr>
@@ -25,6 +20,7 @@
                     <td ng-if="user.response.settings.total_mileage"><b>TODAY MILLEAGE</b></td>
                     <td ng-if="user.response.settings.ignition"><b>IGNITION</b></td>
                     <td ng-if="user.response.settings.location"><b>LOCATION</b></td>
+                    <td><b><a href="" ng-click="vm.user_setting_modal()"><i class="fa fa-cogs fa-2x grey-text" style="margin-left:1%"></i></a></b></td>
                 </tr>
             </thead>
             <tbody>
@@ -37,6 +33,7 @@
                     <td ng-if="user.response.settings.total_mileage">75.6km</td>
                     <td ng-if="user.response.settings.ignition">ON</td>
                     <td ng-if="user.response.settings.location">SPICE Arena, Bayan Lepas, Pulau Pinang</td>
+                    <td></td>
                 </tr>
                  <tr>
                     <td ng-if="user.response.settings.plate_number">ABC 1234</td>
@@ -47,6 +44,7 @@
                     <td ng-if="user.response.settings.total_mileage">75.6km</td>
                     <td ng-if="user.response.settings.ignition">ON</td>
                     <td ng-if="user.response.settings.location">SPICE Arena, Bayan Lepas, Pulau Pinang</td>
+                    <td></td>
                 </tr>
             </tbody>
         </table>
