Logo onclick to navigate

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
         <div class="navbar-fixed" style="z-index: 999;">
             <nav class="white">
                 <div class="nav-wrapper container">
-                    <a href="#!" class="brand-logo">
+                    <a href="/" class="brand-logo">
                         <img src="/assets/image/logo.png">
                     </a>
                     <a href="/dashboard" class="brand-logo blue-text darken-2" ng-class="{'center' : !user }"></a>
