change map table from left to right to top to bottom to be continue with other to be continue stuff

--- a/public/app/dashboard/home.html
+++ b/public/app/dashboard/home.html
@@ -2,7 +2,7 @@
     <div class="col s12 m12 l4" style="margin-top: -20px;">
         <div class="col s12 m12 l6">
             <ul class="tabs">
-                <li class="tab col s6 m6 l6"><a href="#carlist"><i class="fa fa-truck"></i>Vehicle List</a></li>
+                <li class="tab col s6 m6 l6"><a href="#carlist"><i class="fa fa-truck" style="margin-right:2%"></i>Vehicle List</a></li>
                 <li class="tab col s6 m6 l6"><a ng-click="vm.map_initialize()" href="#carmapping">Map</a></li>
             </ul>
         </div>
@@ -55,29 +55,14 @@
             <div class="col s12 m12 l4" >
                 <table>
                     <thead>
-                    <tr>
-                        <td><b>FLEET</b></td>
-                        <td><b>PlATE NO</b></td>
-                        <td><b>DRIVER NAME</b></td>
-                        <td><b>SPEED</b></td>
-                        <td><b>FUEL</b></td>
-                    </tr>
+                    <tr><td style="font-size:150%"><i class="fa fa-truck" style="margin-right:2%"></i>Vehicle Information</td></tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td>Abc Fleet</td>
-                        <td><a href="#">ABC 1234</a></td>
-                        <td>GENE LIM</td>
-                        <td>80 km/h</td>
-                        <td>800</td>
-                    </tr>
-                    <tr>
-                        <td>Abc Fleet</td>
-                        <td><a href="#">DEF 5678</a></td>
-                        <td>DENNIS LEE</td>
-                        <td>76km/h</td>
-                        <td>840</td>
-                    </tr>
+                        <tr><td>FLEET: <b>SHSPG</b></td></tr>
+                        <tr><td>PLATE NO: <b>ABC 1234</b></td></tr>
+                        <tr><td>Driver NAME: <b>Gene Lim</b></td></tr>
+                        <tr><td>SPEED: <b>80 km/h</b></td></tr>
+                        <tr><td>ADDRESS: <b>SPICE Arena, Bayan Lepas, Malaysia</b></td></tr>
                     </tbody>
                 </table>
             </div>
