--- a/public/app/setting/home.html
+++ b/public/app/setting/home.html
@@ -13,6 +13,11 @@
         <li><a ui-sref=".bay_information">Bay Information</a></li>
     </ul>
 
+    <div class="center">
+        <input type="text" id="platenumber" style="width:10%" placeholder="Plate Number">
+        <a class="btn">Search</a>
+    </div>
+
     <div class="divider"></div>
     <div ui-view></div>
 </div>
