--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
             <li><a href="#password" class="modal-trigger" >Password</a></li>
             <li><a href="" >View</a></li>
         </ul>
-        <div class="navbar-fixed" style="z-index: 999;">
+        <div class="navbar-fixed" style="z-index: 999;" ng-if="user">
             <nav class="white">
                 <div class="nav-wrapper container">
                     <a href="/" class="brand-logo">
