--- a/public/app/dashboard/home.html
+++ b/public/app/dashboard/home.html
@@ -1,7 +1,7 @@
 <div class=row">
     <div class="col s12 m12 l4" style="margin-top: -20px;">
         <div class="col s12 m12 l6">
-            <ul class="tabs">
+            <ul class="tabs" style="overflow-x: hidden;">
                 <li class="tab col s6 m6 l6"><a href="#carlist"><i class="fa fa-truck" style="margin-right:2%"></i>Vehicle List</a></li>
                 <li class="tab col s6 m6 l6"><a ng-click="vm.map_initialize()" href="#carmapping">Map</a></li>
             </ul>
