--- a/public/app/dashboard/home.html
+++ b/public/app/dashboard/home.html
@@ -2,8 +2,8 @@
     <div class="col s12 m12 l4" style="margin-top: -20px;">
         <div class="col s12 m12 l6">
             <ul class="tabs" style="overflow-x: hidden;">
-                <li class="tab col s6 m6 l6"><a href="#carlist"><i class="fa fa-truck" style="margin-right:2%"></i>Vehicle List</a></li>
-                <li class="tab col s6 m6 l6"><a ng-click="vm.map_initialize()" href="#carmapping">Map</a></li>
+                <li class="tab col s6 m6 l6"><a href="#carlist" ng-click="vm.initialize();"><i class="fa fa-truck" style="margin-right:2%"></i>Vehicle List</a></li>
+                <li class="tab col s6 m6 l6"><a ng-click="vm.map_initialize();" href="#carmapping">Map</a></li>
             </ul>
         </div>
     </div>
@@ -20,7 +20,7 @@
                     <td ng-if="user.response.settings.total_mileage"><b>TODAY MILLEAGE</b></td>
                     <td ng-if="user.response.settings.ignition"><b>IGNITION</b></td>
                     <td ng-if="user.response.settings.location"><b>LOCATION</b></td>
-                    <td><b><a href="" ng-click="vm.user_setting_modal()"><i class="fa fa-cogs fa-2x grey-text" style="margin-left:1%"></i></a></b></td>
+                    <td ng-if="vm.current_tab === 'list'"><b><a href="" ng-click="vm.user_setting_modal()"><i class="fa fa-cogs fa-2x grey-text" style="margin-left:1%"></i></a></b></td>
                 </tr>
             </thead>
             <tbody>
